# HFLLM

./: .gitignore  AutomaticSpeechRecognition.ipynb  README.md  datasets_deepdive.ipynb  language_modeling.ipynb  pyproject.toml
course/notebooks/: ch1_nb1.ipynb
fine-tune-examples/CV/: image_classification.ipynb
fine-tune-examples/audio-text/: asr.ipynb
fine-tune-examples/text/: QA.ipynb  causal_language_modeling.ipynb  summarization.ipynb  text_classification.ipynb  token_classification.ipynb  translation.ipynb
fine-tune-examples/text/CLM/: advanced_hf_trainer.ipynb
fine-tune-examples/text/MLM/: mlm_dist_pytorch_accl_trainer.ipynb  mlm_hf_trainer.ipynb
fine-tune-examples/text/QA/: basic_hf_trainer.ipynb
fine-tune-examples/text/sequence_classification/: distributed_accelerate_pytorch_trainer.ipynb  hf_trainer_basic.ipynb  hf_trainer_deeper_dive.ipynb  pytorch_trainer.ipynb
fine-tune-examples/text/summarization/: advanced_hf_trainer.ipynb  basic_hf_trainer.ipynb  distributed_accelerate_pytorch_trainer.ipynb
inference-examples/: beyond_pipeline.ipynb  with_pipeline.ipynb
inference-examples/deployment-frameworks/: llama_cpp.ipynb  vLLM.ipynb
notebooks/inference-examples/: beyond_pipeline.ipynb
notebooks/tokenization_deepdive/: 2_fast_tokenizers_powers.ipynb  5_building_a_tokenizer_from_scratch.ipynb  qa_sample.txt
tokenization_deepdive/: 1_retrain_tokenizer_with_new_corpus.ipynb  3_text_prep_steps.ipynb  4_subword_tokenization.ipynb  5_building_a_tokenizer_from_scratch.ipynb  fast_tokenizers_powers.ipynb
(+24 files in other folders)
