[project]
name = "hfllm"
version = "0.1.0"
description = "HFLLM COURSE PRACTICE"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "datasets>=4.6.0",
    "ipykernel>=7.1.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.16",
    "matplotlib>=3.10.8",
    "openai>=2.16.0",
    "vllm>=0.15.0",
]
