[project]
name = "hfllm"
version = "0.1.0"
description = "HFLLM COURSE PRACTICE"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.0",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=0.36.1",
    "ipykernel>=7.1.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.16",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "openai>=2.16.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "torchcodec>=0.11.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.2",
    "transformers>=4.57.6",
    "vllm>=0.15.0",
    "wandb>=0.26.0",
    "zstandard>=0.25.0",
]
